Bug 156508 - Blur shadow is solid in edit and presentation mode
Summary: Blur shadow is solid in edit and presentation mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+ Master
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Object
  Show dependency treegraph
 
Reported: 2023-07-28 21:02 UTC by Regina Henschel
Modified: 2023-08-05 12:35 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Image with blur shadow (49.56 KB, application/vnd.oasis.opendocument.presentation)
2023-07-28 21:02 UTC, Regina Henschel
Details
Screenshot slideshow (394.15 KB, image/png)
2023-07-28 23:49 UTC, m.a.riosv
Details
sample ODP with various blurred shadows (18.12 KB, application/vnd.oasis.opendocument.text)
2023-08-02 21:12 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-07-28 21:02:19 UTC
Created attachment 188618 [details]
Image with blur shadow

Open attached presentation. It has a slide with two images. The images have a shadow with blur. The blur effect is missing in edit mode and in presentation mode. The shadow is solid. I have tested it with Skia on and with Skia off.

I see the error first in Version (2023-07-26): 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ea3317188589554ea5773db53aa9e0cc88bee271
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

and still in Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cf8f7b91f41821b79495c0388359c4cb1156ea67
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded

It was OK in Version (2023-07-25): 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 42f0422d19c4d0a2fb09654fb6d1d92e50f6dd5c
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 1 m.a.riosv 2023-07-28 23:49:37 UTC
Created attachment 188625 [details]
Screenshot slideshow

I see solid editing, but I think is fine on slideshow

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 42f0422d19c4d0a2fb09654fb6d1d92e50f6dd5c
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 2 Stéphane Guillou (stragu) 2023-07-29 07:39:45 UTC
Blur in edit mode and presentation with:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 46d7119b8be03968017e59d882e5671350304e15
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Solid in both in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e06456180ade61aa519819702810a3b9779a6e9e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Same in the preview in the dialog: context menu > Edit Style > Shadowing.

Noel, is this related to the Alpha work in 81994cb2b8b32453a92bcb011830fcb884f22ff3 ?
Comment 3 Ezinne 2023-07-29 15:00:33 UTC
I see the Shadow as Solid in both edit mode and presentation mode.


Not reproducible in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e26aeb882dd236adf19679d5df9b7ba5da1ed226
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 4 Stéphane Guillou (stragu) 2023-08-02 21:11:26 UTC
Affects more than Impress, and affects more than images. Blurred shadows of shapes, images, fontwork, formulas are affected.

Bibisected with linux-64-24.2 repo to first bad commit c21a1c45e2403119c90af25cdb5350f978d5c93b which points to core commit:

gerrit.libreoffice.org / core / 81994cb2b8b32453a92bcb011830fcb884f22ff3
commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
author	Noel Grandin Fri Apr 16 20:33:10 2021 +0200
committer	Noel Grandin Tue Jul 25 08:38:12 2023 +0200
Convert internal vcl bitmap formats transparency->alpha (II)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114168

Noel, can you please have a look?
Comment 5 Stéphane Guillou (stragu) 2023-08-02 21:12:30 UTC
Created attachment 188734 [details]
sample ODP with various blurred shadows
Comment 6 Commit Notification 2023-08-04 11:35:26 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0e7d4ea64f84bdc62c10692dcd97c3a32e72e16e

tdf#156508 Blur shadow is solid in edit and presentation mode

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Patrick Luby 2023-08-04 23:25:43 UTC
I am seeing white polygons in the LibreoOffice round .svg logo in the About dialog in the patch. It also occurs if you put the .svg in a document so it looks like some extra tweaking is needed.

I'll see if I can find something that preserves the fix for this bug without breaking .svg rendering.
Comment 8 Commit Notification 2023-08-05 12:28:36 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe9efb6d5eeba3adf81cd1f33b684fd8f57899f5

Related tdf#156508 fix rendering of the About dialog .svg

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Patrick Luby 2023-08-05 12:35:02 UTC
Reverting status back to resolved/fixed. The fix for the white polygons in the About dialog logo should be in tomorrow's (06 August 2023) nightly build.