tdf#156508 Blur shadow is solid in edit and presentation mode

regression from
    commit 81994cb2b8b32453a92bcb011830fcb884f22ff3
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Apr 16 20:33:10 2021 +0200
    Convert internal vcl bitmap formats transparency->alpha (II)

Change-Id: I14f62547e3301cab0eff79716bf7bc2a51ead563
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155338
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>